Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10654

lnetctl commands fail to error out with mistyped parameters

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • Lustre 2.10.3
    • None
    • 3
    • 9223372036854775807

      Adding net or peer using lnetctl command with mistyped parameters doesn't error out and the behaviour is unexpected.

      [root@10 ~]#lnetctl net add --nt  tcp --if eth0
      [root@10 ~]# lnetctl net show 
      net:
       - net type: lo
         local NI(s):
           - nid: 0@lo
           status: up
      
      
      [root@10 ~]# lnetctl peer add --pris_nis 10.211.55.24@tcp
      [root@10 ~]# lnetctl peer show 
      [root@10 ~]# peer:
      
      
      

            sharmaso Sonia Sharma (Inactive)
            sharmaso Sonia Sharma (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: