LU-10654 lnet: lnetctl doesn't error out on mistyped options

Running lnetctl command to add/delete peer/net/route should
error out with mistyped options.

This patch add the changes in lnetctl.c to make lnetctl
error out withmistyped options.

Change-Id: Ib8ae54bea919d6ff235b4ca3a23807a809f8962c
Test-Parameters: trivial
Signed-off-by: Sonia Sharma <sonia.sharma@intel.com>
Reviewed-on: https://review.whamcloud.com/31265
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Amir Shehata <ashehata@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>